<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:elevation="2dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:background="@android:color/background_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/newsImgView"
                android:transitionName="image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/this_is_the_item_image"
                />

            <ProgressBar
                android:id="@+id/loading_image"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"/>

            <TextView
                android:id="@+id/authorTxtView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:layout_marginEnd="160dp"
                android:text="@string/author"
                android:gravity="bottom"
                android:layout_alignStart="@id/newsTitleTxtView"
                android:layout_alignTop="@id/date_layout"
                android:layout_toEndOf="@id/date_layout"
                />

            <FrameLayout
                android:id="@+id/date_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsDescTxtView"
                android:background="@android:color/background_light"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp">

                <ImageView
                    android:id="@+id/dateImgView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/calendar_logo"
                    android:src="@drawable/ic_date_range_24dp" />

                <TextView
                    android:id="@+id/newsDateTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#606060"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/default_date_label"/>

            </FrameLayout>

            <TextView
                android:id="@+id/newsTitleTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/newsImgView" />

            <TextView
                android:id="@+id/newsDescTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsTitleTxtView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/newsSourceTxtView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/newsDescTxtView"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/news_source" />

            <TextView
                android:id="@+id/newsTimeTxtView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/newsDescTxtView"
                android:layout_marginTop="10dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/newsSourceTxtView"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/news_time" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>